# compiler

./: .dockerignore  .gitignore  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Cargo.toml  Dockerfile  LICENSE.rst  LICENSE.txt  README.rst  Web.toml  build.gradle  contributors.rst  deny.toml  dependencies.gradle  detekt.yml  gradle.properties  module_notes.txt  package.json  platform_common.gradle  platform_js.gradle  platform_jvm.gradle  project_structure.rst  rustfmt.toml  settings.gradle
.github/workflows/: checks-basic.yml  checks-simple.yml  checks-stable.yml  create-release.yml  dependency-checks.yml  docker-lib.yml
ast/: build.gradle  settings.gradle
ast_core/: Cargo.toml
ast_full/: Cargo.toml
binary/: settings.gradle
browser/: build.gradle  settings.gradle
ci/: README.md  all.sh  simple.Dockerfile
ci/image/: base.Dockerfile  base_nightly.Dockerfile  cargo_for_coverage.sh  debug.Dockerfile  debug_nightly.Dockerfile  executable.Dockerfile
ci/pipeline/: shared.sh
ci/pipeline/make/: base.sh  (+2 more)
cli/: Cargo.toml  build.gradle  main.rs  settings.gradle
cli/src/test/kotlin/org/mangolang/cli/: PlaceholderTest.kt
common/: build.gradle  settings.gradle
dev/: README.rst  build.gradle  build_web.sh  experiment_slice_refcell.rs  settings.gradle
dev/dev-jvm/: build.gradle
dev/hook_utils/: run_on_staged.py  util_cmd.py
dev/hooks/: commit-msg  note.rst  post-commit  pre-commit
dev/old/: experiment_slice_pin.rs  experiment_slice_rc.rs  experiment_slice_refcell.rs  setup_guide.rst
dev/playground/: Cargo.toml  README.rst
fullast/: SYNTAX.rst
govern/: settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ir/: Cargo.toml  settings.gradle
jit/: Cargo.toml  settings.gradle
jit/src/test/kotlin/org/mangolang/jit/: PlaceholderTest.kt
lexing/: Cargo.toml  build.gradle  settings.gradle
mango-js/: build.gradle
mango-jvm/: build.gradle
optimizing/: Cargo.toml  build.gradle  settings.gradle
optimizing/src/test/kotlin/org/mangolang/optimizing/: PlaceholderTest.kt
other/hooks/: post-commit
parsing/: Cargo.toml
parsing/src/main/kotlin/org/mangolang/parsing/: errors.kt  parse.kt  parseAddition.kt  parseAssignment.kt  parseBinaryOperation.kt  parseDeclaration.kt  parseExpression.kt  parseGroup.kt  parseLiteral.kt  parseMultiplication.kt  parseUnary.kt
parsing/src/test/kotlin/org/mangolang/parsing/: AssociativityTest.kt  ParseAdditionTest.kt  ParseGroupTest.kt  ParseMultiplicationTest.kt  ParseNestedMathTest.kt  ParseUnaryTest.kt  PlaceholderTest.kt  assert.kt
playground/: Cargo.toml
reading/: build.gradle  settings.gradle
reducing/: Cargo.toml  build.gradle  settings.gradle
sem/: Cargo.toml
sem/src/main/kotlin/org/mangolang/sem/: Sem.kt
sem/src/test/kotlin/org/mangolang/sem/: PlaceholderTest.kt
semanticating/: Cargo.toml
src/: lib.rs  main.rs  orchestrate.rs  project_structure.rst
src/ast/: tests.rs
src/ast_core/: build.gradle
src/ast_full/: build.gradle  mod.rs  tests.rs
src/common/: debug.rs  error.rs  mod.rs  source.rs  tests.rs
src/doc/: project_structure.rst
src/io/: disk.rs  mod.rs  slice.rs  source.rs  typ.rs  util.rs
src/ir/: build.gradle  collect.rs  mod.rs  typ.rs
src/jit/: build.gradle
src/lexeme/: mod.rs  tests.rs
src/lexing/: build.gradle  code_lexer.rs  code_lexer_prev.rs  combi_lexer.rs  gen_code_lexer.rs  grouping.rs  identifier.rs  indent.rs  lex.rs  lexer.rs  literals.rs  mod.rs  old_lexer.rs  operator.rs  separators.rs  special.rs  string_lexer.rs  tests.rs  typ.rs
src/mango/: project_structure.rst
src/optimizing/: build.gradle
src/parselet/: SYNTAX.rst  mod.rs  tests.rs
src/parsing/: arithmetic.rs  build.gradle  grouping.rs  literals.rs  mod.rs  parse.rs  tests.rs
src/pest/: mod.rs  parser.rs
src/pestparser/: mango.pest  mod.rs  parser.rs
src/playground/: lib.rs  mod.rs
src/reducing/: build.gradle
src/sem/: build.gradle  mod.rs
src/semanticating/: build.gradle
src/token/: mod.rs  tests.rs
src/towasm/: mod.rs  tests.rs  typ.rs
src/ui/: mod.rs
src/util/: build.gradle  mod.rs
static/: index.html
tests/: basics.rs  hello_world.rs
token/: Cargo.toml  settings.gradle
token/src/main/kotlin/org/mangolang/token/: AssociationToken.kt  IdentifierToken.kt  IntegerToken.kt  OperatorToken.kt  ParenthesisCloseToken.kt  ParenthesisOpenToken.kt  RealToken.kt  StringToken.kt  Token.kt  TokenStream.kt
token/src/main/kotlin/org/mangolang/token/mock/: FixedTokenStream.kt  MockTokenStream.kt
token/src/test/kotlin/org/mangolang/token/: PlaceholderTest.kt  TokenEqualityTest.kt
typing/: Cargo.toml
typing/src/test/kotlin/org/mangolang/typing/: PlaceholderTest.kt
util/: Cargo.toml  build.gradle
util/src/main/kotlin/org/mangolang/concurrent/: collections.kt
util/src/main/kotlin/org/mangolang/util/: HasTextRepresentation.kt  Name.kt  Result.kt  constants.kt
util/src/main/kotlin/org/mangolang/util/checks/: assert.kt  platform_assert.kt  require.kt
util/src/main/kotlin/org/mangolang/util/concurrent/: collections.kt
util/src/main/kotlin/org/mangolang/util/errors/: CompileProblem.kt  ProblemListener.kt  ThresholdedListener.kt
util/src/main/kotlin/org/mangolang/util/errors/mock/: MockListener.kt
util/src/main/kotlin/org/mangolang/util/escape/: string.kt
util/src/main/kotlin/org/mangolang/util/text/: Message.kt
util/src/test/kotlin/org/mangolang/util/: NameTest.kt
util/src/test/kotlin/org/mangolang/util/checks/: RequireTest.kt
util/src/test/kotlin/org/mangolang/util/errors/: ThresholdListenerTest.kt
util/src/test/kotlin/org/mangolang/util/escape/: StringTest.kt
util/util-js/src/main/kotlin/org/mangolang/concurrent/: collections.kt
util/util-js/src/main/kotlin/org/mangolang/util/checks/: platform_assert.kt
util/util-js/src/main/kotlin/org/mangolang/util/concurrent/: collections.kt
util/util-jvm/: build.gradle
util/util-jvm/src/main/kotlin/org/mangolang/concurrent/: collections.kt
util/util-jvm/src/main/kotlin/org/mangolang/util/checks/: platform_assert.kt
util/util-jvm/src/main/kotlin/org/mangolang/util/concurrent/: collections.kt
(+463 files in other folders)
