[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
version = "0.3.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[dependencies]
regex = "^1.1.6"
string-interner = "^0.7.0"
lazy_static = "^1.3.0"
derive-new = "^0.5.6"
#cargo-wasm = "0.4.*"
wasm-bindgen = "^0.2.42"
itertools = "^0.8.0"  # TODO @mark: unused?

# TODO: Temporary, indirect dependency that needs version bound to work
proc-macro2 = ">=0.4.24"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]
name = "mango"
path = "src/lib.rs"

#[[bin]]
#name = "mangoc"
#path = "src/mango/ui/cli/morehashing.rs"

#[[bin]]
#name = "mango-webi"
#path = "src/mango/ui/webi/compile_str.rs"
