[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
version = "0.4.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "cli/**/*",
    "Cargo.toml"
]

[lib]
#crate-type = ["cdylib", "rlib"]
name = "mango"
path = "src/lib.rs"

[[bin]]
name = "mangoc"
path = "cli/main.rs"

[dependencies]
#nom = "^6.0.0-alpha1"
regex = "^1.3.9"
string-interner = "^0.7.1"
lazy_static = "^1.4.0"
derive-new = "^0.5.8"
#cargo-wasm = "0.4.*"
#wasm-bindgen = "^0.2.63"
itertools = "^0.8.2"  # TODO @mark: unused?
smallvec = { version = "^0.6.13", features = ["union"] }
#indoc = "^0.3.5"
parity-wasm = "^0.41.0"

# TODO: Temporary, indirect dependency that needs version bound to work
proc-macro2 = ">=0.4.24"

[profile.release]
lto = true
opt-level = 'z'

[profile.dev.package."*"]
opt-level = 3
