[package]
name = "mangolib"
description = "The Mango programming language (front-end library) (UNDER CONSTRUCTION)"
# Note: until version 0.4.0, the crates.io 'mango' crate was what since 0.5.0 is 'mangolib'
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "mangolib"
path = "src/lib.rs"

#[[bin]]
#name = "mangoc"
#path = "cli/main.rs"

[dependencies]
#mango_ir = { path = "../mango_ir" }
#scoped_name = { path = "../scoped_name" }
mango_ir = "0.1.0"
scoped_name = "0.2.0"
#nom = "^6.0.0-alpha1"
regex = "1.4.5"
ustr = "0.7.0"
lazy_static = "1.4.0"
derive-new = "0.5.9"
#cargo-wasm = "0.4.*"
#wasm-bindgen = "^0.2.63"
#itertools = "^0.8.2"  # TODO @mark: unused?
# #TODO @mark: this one: smallvec = { version = "1.6.1", features = ["union"] }
smallvec = { version = "1.6.1" }
#indoc = "^0.3.5"
#parity-wasm = "^0.41.0"

# TODO: Temporary, indirect dependency that needs version bound to work
proc-macro2 = "1.0.24"

[dev-dependencies]

[profile.release]
opt-level = 3  # or 'z' ?
lto = 'thin'

[profile.test]
#opt-level = 2
#lto = 'thin'
#static_assertions = "1.1.0"

[profile.dev.package."*"]
opt-level = 3
