[package]
name = "mango"
description = "The command line interface for the Mango programming language (UNDER CONSTRUCTION)"
version = "0.2.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangolang.org/"
documentation = "https://mangolang.org/"
license = "Apache-2.0"
publish = true

[dependencies]
