[package]
name = "mango_compiler_jit"
description = "The just-in-time compiler for the Mango programming language (PLANNED FOR FUTURE)"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangolang.org/"
documentation = "https://mangolang.org/"
license = "Apache-2.0"
publish = true

[dependencies]
