[package]
name = "mango_compiler_optimizing"
description = "The optimizer for the Mango programming language (UNDER CONSTRUCTION)"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangolang.org/"
documentation = "https://mangolang.org/"
license = "Apache-2.0"
publish = true

[dependencies]
